# bulk_processing

./: README.md  docker-compose.yml
backend/: Dockerfile  docker_entrypoint.sh  main.py  pyproject.toml  run_main.py
backend/config/: __init__.py  constants.py  logger.py
backend/src/lib/: aio_http_service.py  redis_service.py
backend/src/router/: __init__.py  bulk_process_router.py  hospital_router.py  schemas.py
backend/src/router/services/: hospital_service.py
backend/src/services/: aio_http_service.py  redis_service.py
test/: README.md  pyproject.toml  test.ipynb  test.py
